01-K3S/cluster/lab-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-staging
  name: lab-ingress
  namespace: default
spec:
  tls:
  - hosts:
    - beam.lab
    secretName: beam-lab-tls
  rules:
  - host: beam.lab
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /
